# My_projects

./: .gitignore
Akim_tasks/task129/: input.txt  main.py  run.sh
C++_lessons/: README.md
C++_lessons/src/: Main.cpp
C++_lessons/taskOne/: CMakeLists.txt  run.sh
C++_lessons/taskThree/: CMakeLists.txt  README.md  run.sh
C++_lessons/taskThree/src/: f1.txt  f2.txt  main  main.cpp
C++_lessons/taskTwo/: .gitignore  CMakeLists.txt  run.sh
C++_lessons/taskTwo/src/: main.cpp
LeetCode/: CountSquareSubmatriceswithAllOnes.py  MedianOfTwoSortedArrays.py  RegularExpressionMatch.py
OOP/taskOne/: .gitignore  README.md  build.sh  demo.sh
OOP/taskOne/src/: AggressiveGC.java  App.java  CopyingGC.java  GCObject.java  GCTest.java  GarbageCollector.java  Heap.java  MarkAndSweepGC.java  SimpleGC.java  SimpleVariablesExample.java
Project_FastAPI/: Dockerfile  create_tables.py  docker-compose.yml  main.py  requirements.txt
Project_FastAPI/api/: api_router.py
Project_FastAPI/api/endpoints_v1/: endpoints.py
Project_FastAPI/crud/: crud.py
Project_FastAPI/db/: session.py
Project_FastAPI/db/models/: __init__.py  user.py  user_works.py  work.py
Project_FastAPI/schemas/: user_schema.py  user_works_schema.py  work_schema.py
SQL_lessons/: docker-compose.yml
project-nextjs/: .gitignore  NEXTAUTH_SETUP.md  docker-compose.yml  package-lock.json  package.json
project-nextjs/prisma/: schema.prisma
project-nextjs/src/app/: layout.tsx  page.tsx
project-nextjs/src/lib/: auth.ts
project-nextjs/src/types/: love_couples_type.ts  next-auth.d.ts  user_type.ts
(+18 files in other folders)
